--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -169,6 +169,7 @@
     position: absolute;
     top: 0;
     text-align: left;
+    left: 1rem;
   }
   .reference-bp-share-icon-svg {
     margin: 2.5rem 0;
