--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -158,7 +158,7 @@
       a {
         font-size: 14px;
         color: #fff;
-        list-style: $line-height-150;
+        line-height: $line-height-150;
       }
     }
     @include sm {
