--- a/src/scss/brand/components/section-with-bg/_index.scss
+++ b/src/scss/brand/components/section-with-bg/_index.scss
@@ -106,3 +106,9 @@
     }
   }
 }
+
+.hoverable-boxes-wrapper > .component-content {
+  background-color: transparent !important;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
