--- a/src/scss/brand/theme/_brand-styles.scss
+++ b/src/scss/brand/theme/_brand-styles.scss
@@ -367,3 +367,9 @@ a[style*='visibility:hidden'] {
   }
 }
 /* Safari Specific CSS */
+
+a:hover {
+  span {
+    background-color: inherit;
+  }
+}
