--- a/src/scss/brand/components/headings-and-borders/_index.scss
+++ b/src/scss/brand/components/headings-and-borders/_index.scss
@@ -165,6 +165,7 @@
 .lime-bg-strip {
   background: $color-secondary-lime;
   padding: 0 0.25rem;
+  color: $color-2;
 }
 .heading-with-bg {
   color: $color-2;
