--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -359,25 +359,23 @@
   }
   h2 {
     @extend .giant-font;
-    color: $color-secondary-lime;
   }
   p {
     @extend .font-size--small;
     @extend .font-extra-bold;
-    color: $color-secondary-lime;
   }
   .display-on-hover {
     visibility: hidden;
+  }
+  *{
+    color: $color-secondary-lime;
   }
 }
 
 .hoverable-boxes:hover {
   background-color: $color-secondary-lime;
   color: $color-2;
-  h2 {
-    color: $color-2;
-  }
-  p {
+  * {
     color: $color-2;
   }
   .display-on-hover {
