--- a/src/scss/brand/theme/_brand-styles.scss
+++ b/src/scss/brand/theme/_brand-styles.scss
@@ -363,6 +363,12 @@ a[style*='visibility:hidden'] {
 .text-grey {
   color: $color-3;
 }
+.order-m-2{
+ order: 2;
+ @include sm{
+  order: unset;
+ }
+}
 .img-full-height {
   height: 100%;
 }
