--- a/src/scss/brand/components/text-banners/_index.scss
+++ b/src/scss/brand/components/text-banners/_index.scss
@@ -24,7 +24,7 @@
 .box-with-fullcover-bg {
   > .component-content {
     background-repeat: no-repeat;
-    background-size: 100%;
-    background-position: center;
+    background-size: contain;
+    background-position: top center;
   }
 }
