--- a/src/scss/brand/components/arrow-links/_index.scss
+++ b/src/scss/brand/components/arrow-links/_index.scss
@@ -9,10 +9,11 @@
     position: absolute;
     right: 0px;
     bottom: 0px;
-    width: 72px;
-    line-height: 72px;
+    width: 68px;
+    line-height: 68px;
     color: $color-2;
-    border: 2px solid $color-primary;
+    border: 2px solid;
+    border-color: $color-primary;
   }
 }
 .bottom-external-arrow {
@@ -26,10 +27,11 @@
     position: absolute;
     right: 0px;
     bottom: 0px;
-    width: 72px;
-    line-height: 72px;
+    width: 68px;
+    line-height: 68px;
     color: $color-2;
-    border: 2px solid $color-primary;
+    border: 2px solid;
+    border-color: $color-primary;
   }
 }
 .arrow-size-small {
