--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -248,6 +248,11 @@
   .heading-bg-strip {
     margin-bottom: 1rem !important;
     overflow: hidden;
+    &.strong {
+      span {
+        font-weight: $font-extra-bold;
+      }
+    }
     @include sm {
       margin-bottom: 3rem !important;
       overflow: visible;
