--- a/src/scss/brand/components/carousel/_index.scss
+++ b/src/scss/brand/components/carousel/_index.scss
@@ -98,3 +98,11 @@
     }
   }
 }
+
+.reference-homepage-carousel{
+  overflow: hidden;
+  padding-top: 1.5rem;
+  h2{
+    margin-bottom: 2rem;
+  }
+}
