--- a/src/scss/default/components/light-slider/_index.scss
+++ b/src/scss/default/components/light-slider/_index.scss
@@ -5,7 +5,7 @@
   /** /!!! core css Should not edit !!!/**/
 
   .lSSlideOuter {
-    overflow: hidden;
+    overflow: visible;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
