--- a/src/scss/brand/theme/_brand-styles.scss
+++ b/src/scss/brand/theme/_brand-styles.scss
@@ -387,7 +387,7 @@ a:hover {
 }
 
 .m-l-r-auto {
-  .flex > div > div > div:nth-last-of-type(1) {
+  &.flex > div > div > div:nth-last-of-type(1) {
     margin-left: auto !important;
     margin-right: auto !important;
   }
