--- a/src/scss/brand/components/headings-and-borders/_index.scss
+++ b/src/scss/brand/components/headings-and-borders/_index.scss
@@ -168,6 +168,15 @@
   @include sm {
     padding-left: 0;
   }
+  .strip-inside-content{
+    padding: 0;
+    .two-steps {
+      padding-left: 0.75rem;
+      @include sm{
+        padding-left:0;
+      }
+    }
+  }
 }
 .lime-bg-strip {
   background: $color-secondary-lime;
