--- a/src/scss/brand/components/headings-and-borders/_index.scss
+++ b/src/scss/brand/components/headings-and-borders/_index.scss
@@ -170,10 +170,13 @@
   }
   &.strip-inside-content{
     padding: 0;
+    @include sm{
+      padding-left: 0.75rem;
+    }
     .two-steps {
       padding-left: 0.75rem;
       @include sm{
-        padding-left:0;
+        margin-left: 0;
       }
     }
   }
