--- a/src/scss/brand/components/headings-and-borders/_index.scss
+++ b/src/scss/brand/components/headings-and-borders/_index.scss
@@ -183,6 +183,9 @@
   }
   &.strip-inside-content {
     padding: 0;
+    @include sm{
+      margin-top: -65px;
+    }
     .two-steps {
       padding-left: 0.75rem;
       @include sm {
