--- a/src/scss/brand/theme/_brand-styles.scss
+++ b/src/scss/brand/theme/_brand-styles.scss
@@ -414,3 +414,16 @@ a:hover {
 .find-more-link {
   border-bottom: 2px solid $color-primary;
 }
+.banner-padding{
+  padding-right: 0;
+  padding-left: 0;
+  @include sd{
+    padding-left: auto;
+  }
+  .heading{
+    padding-left: 2rem;
+    @include sm{
+      padding-left: auto;
+    }
+  }
+}
