--- a/src/scss/brand/components/profile/_index.scss
+++ b/src/scss/brand/components/profile/_index.scss
@@ -52,7 +52,7 @@
       /* left: -100vw; */
       z-index: 1;
       height: 40px;
-      top: 42%;;
+      top: 42%;
     }
     @include sd {
       height: 60px;
