--- a/src/scss/brand/components/slick-slider/_index.scss
+++ b/src/scss/brand/components/slick-slider/_index.scss
@@ -250,6 +250,12 @@
       order: 2;
       .slick-track {
         display: flex;
+        .thumbs-wrapper {
+          display: flex;
+          p {
+            padding: 1rem;
+          }
+        }
       }
     }
 
@@ -259,6 +265,7 @@
     .carousel-wrapper {
       display: flex;
       > div {
+        padding: 0 1.5rem;
         > div {
           display: flex;
           flex-direction: column;
