--- a/src/scss/brand/components/mega-menu/_index.scss
+++ b/src/scss/brand/components/mega-menu/_index.scss
@@ -1050,7 +1050,7 @@ header {
   > .navigation-root.navigation-level1
   .navigation-item
   > a {
-  padding: 0 1rem;
+  padding: 0 1.25rem;
   position: relative;
   width: auto;
 }
@@ -1059,12 +1059,9 @@ li.page-our-brands,
 li.page-planet-and-people,
 li.page-careers {
   margin: 0 5px;
-}
-li.page-who-we-are a,
-li.page-our-brands a,
-li.page-planet-and-people a,
-li.page-careers a {
-  margin-left: -15px;
+  a {
+    margin-left: -15px;
+  }
 }
 li.page-who-we-are a::before,
 li.page-our-brands a::before,
