--- a/src/scss/brand/components/slick-slider/_index.scss
+++ b/src/scss/brand/components/slick-slider/_index.scss
@@ -246,12 +246,17 @@
   .product-slider {
     display: flex;
     flex-direction: column;
+
     .slider-galeria-thumbs {
       order: 2;
+      margin-top: -4rem;
+      z-index: 1;
       .slick-track {
         display: flex;
+
         .thumbs-wrapper {
           display: flex;
+
           p {
             padding: 1rem;
           }
@@ -262,15 +267,45 @@
     .slick-track {
       display: flex;
     }
+
     .carousel-wrapper {
       display: flex;
+
       > div {
         padding: 0 1.5rem;
+
         > div {
           display: flex;
           flex-direction: column;
         }
       }
+    }
+
+    ul.slick-dots {
+      text-align: center;
+      padding: 0;
+      position: absolute;
+      bottom: 8rem;
+      left: 122px;
+      cursor: pointer;
+      width: 50px;
+      justify-content: space-between;
+      align-items: center;
+      display: flex;
+      list-style-type: none;
+    }
+
+    .slick-dots li {
+      width: 4px;
+      height: 20px;
+      background-color: $color-1;
+      border-radius: 0;
+    }
+
+    .slick-dots li.slick-active {
+      width: 8px;
+      height: 32px;
+      background-color: $color-black;
     }
   }
 }
