--- a/src/scss/brand/components/mega-menu/_index.scss
+++ b/src/scss/brand/components/mega-menu/_index.scss
@@ -1074,40 +1074,48 @@ li.page-careers a::before {
 }
 li {
   &.page-planet-and-people {
-    min-width: 160px;
-    a::before {
-      @include md {
-        left: 7.75rem;
+    a {
+      min-width: 162px;
+      &::before {
+        @include md {
+          left: 7.75rem;
+        }
       }
     }
   }
 }
 li {
   &.page-our-brands {
-    min-width: 105px;
-    a::before {
-      @include md {
-        left: 4.25rem;
+    a {
+      min-width: 107px;
+      &::before {
+        @include md {
+          left: 4.25rem;
+        }
       }
     }
   }
 }
 li {
   &.page-who-we-are {
-    min-width: 115px;
-    a::before {
-      @include md {
-        left: 5rem;
+    a {
+      min-width: 117px;
+      &::before {
+        @include md {
+          left: 5rem;
+        }
       }
     }
   }
 }
 li {
   &.page-careers {
-    min-width: 80px;
-    a::before {
-      @include md {
-        left: 2.4rem;
+    a {
+      min-width: 82px;
+      &::before {
+        @include md {
+          left: 2.4rem;
+        }
       }
     }
   }
