--- a/src/scss/brand/components/mega-menu/_index.scss
+++ b/src/scss/brand/components/mega-menu/_index.scss
@@ -216,6 +216,7 @@ header {
               font-size: $font-size-16 !important;
               font-weight: $font-normal !important;
               cursor: pointer;
+              margin: 0 5px;
               &:hover {
                 background-color: $color-primary !important;
               }
@@ -245,6 +246,7 @@ header {
             max-width: 250px;
             height: auto;
             margin: 0;
+            margin-bottom: 2px;
           }
           &:hover {
             height: auto;
