--- a/src/scss/brand/components/slick-slider/_index.scss
+++ b/src/scss/brand/components/slick-slider/_index.scss
@@ -286,7 +286,7 @@
       padding: 0;
       position: absolute;
       bottom: 8rem;
-      left: 122px;
+      left: 1.5rem;
       cursor: pointer;
       width: 50px;
       justify-content: space-between;
