--- a/src/scss/brand/components/mega-menu/_index.scss
+++ b/src/scss/brand/components/mega-menu/_index.scss
@@ -631,7 +631,12 @@ header {
   width: 0;
   margin: 0;
 }
-
+.megamenu-main-nav>*>.navigation-root.navigation-level1 .navigation-item {
+  @include md {
+    max-height: initial;
+    height: auto;
+  }
+}
 @media (max-width: 991px) {
   .megamenu-navigation
     .megamenu-main-nav
