--- a/src/scss/brand/components/carousel/_index.scss
+++ b/src/scss/brand/components/carousel/_index.scss
@@ -5,7 +5,7 @@
 
   .carousel-slides {
     height: auto !important;
-
+    box-shadow: 0px 12px 20px -4px rgba(0, 0, 0, 0.1);
     .richText {
       padding: 0 1rem;
 
