--- a/src/scss/brand/components/carousel/_index.scss
+++ b/src/scss/brand/components/carousel/_index.scss
@@ -6,7 +6,7 @@
   .carousel-slides {
     height: auto !important;
     .richText {
-      padding: 0 1rem;
+      padding: 0 1rem 1rem;
 
       &.even {
         padding: 0;
