--- a/src/scss/brand/components/mega-menu/_index.scss
+++ b/src/scss/brand/components/mega-menu/_index.scss
@@ -631,7 +631,7 @@ header {
   width: 0;
   margin: 0;
 }
-.megamenu-main-nav>*>.navigation-root.navigation-level1 .navigation-item {
+.megamenu-main-nav > * > .navigation-root.navigation-level1 .navigation-item {
   @include md {
     max-height: initial;
     height: auto;
@@ -1063,8 +1063,7 @@ header {
 }
 li.page-who-we-are a::before,
 li.page-our-brands a::before,
-li.page-planet-and-people a::before,
-li.page-careers a::before {
+li.page-planet-and-people a::before {
   content: '\e903';
   font-family: 'icomoon';
   color: #a19e9e;
@@ -1110,18 +1109,6 @@ li {
       &::before {
         @include md {
           left: 5rem;
-        }
-      }
-    }
-  }
-}
-li {
-  &.page-careers {
-    a {
-      min-width: 82px;
-      &::before {
-        @include md {
-          left: 2.4rem;
         }
       }
     }
