--- a/src/scss/brand/components/carousel/_index.scss
+++ b/src/scss/brand/components/carousel/_index.scss
@@ -17,7 +17,7 @@
   .carousel-slide {
     background: #fff;
     box-shadow: 0px 12px 20px -4px rgba(0, 0, 0, 0.1);
-    padding-bottom: 2.5rem;
+    margin-bottom: 2.5rem;
     ul.tag-links {
       width: 80%;
       position: relative;
