--- a/src/scss/brand/components/slick-slider/_index.scss
+++ b/src/scss/brand/components/slick-slider/_index.scss
@@ -307,5 +307,9 @@
       height: 32px;
       background-color: $color-black;
     }
+    .tag-time-wrapper{
+      display: flex;
+      justify-content: space-between;
+    }
   }
 }
