--- a/src/scss/brand/components/slick-slider/_index.scss
+++ b/src/scss/brand/components/slick-slider/_index.scss
@@ -251,6 +251,9 @@
       order: 2;
       margin-top: -4rem;
       z-index: 1;
+      @include sd{
+        margin-top: -2rem;
+      }
       .slick-track {
         display: flex;
 
@@ -285,7 +288,7 @@
       text-align: center;
       padding: 0;
       position: absolute;
-      bottom: 8rem;
+      bottom: 2rem;
       left: 1.5rem;
       cursor: pointer;
       width: 50px;
