--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -197,6 +197,7 @@
   text-align: center;
   justify-content: center;
   align-items: center;
+  list-style-type: none;
   li {
     border: 1px dashed $color-1;
     margin: 0 10px 0 0 !important;
