--- a/src/scss/brand/components/slick-slider/_index.scss
+++ b/src/scss/brand/components/slick-slider/_index.scss
@@ -261,7 +261,7 @@
       }
       .slick-track {
         display: flex;
-        height: auto !important;
+
         .thumbs-wrapper {
           display: flex;
 
@@ -270,6 +270,10 @@
           }
         }
       }
+    }
+
+    .slick-track {
+      display: flex;
     }
 
     .carousel-wrapper {
@@ -336,8 +340,8 @@
       margin-bottom: 0;
     }
   }
-
-  .slick-list {
+  
+  .slick-list{
     height: auto !important;
   }
 }
