--- a/src/scss/brand/components/slick-slider/_index.scss
+++ b/src/scss/brand/components/slick-slider/_index.scss
@@ -274,7 +274,9 @@
         }
       }
     }
-
+    .slick-track {
+      display: flex;
+    }
     .carousel-wrapper {
       display: flex;
       flex-direction: column;
