--- a/src/scss/brand/components/slick-slider/_index.scss
+++ b/src/scss/brand/components/slick-slider/_index.scss
@@ -256,6 +256,10 @@
         margin-top: 0;
         z-index: 1;
         margin-top: -2rem;
+        width: 100%;
+      }
+      @include lg{
+        width: 90%;
       }
 
       @include sd {
@@ -265,6 +269,20 @@
       .slick-track {
         display: flex;
         height: auto !important;
+        .slick-slide{
+          @include sm{
+            padding: 0 1rem 0 0;
+          }
+          @include md{
+            padding: 0 2rem 0 0;
+          }
+          &.slick-active{
+            .thumbs-wrapper{
+              border-bottom: 6px solid $color-primary;
+            }
+            
+          }
+        }
         .thumbs-wrapper {
           display: flex;
 
@@ -288,12 +306,12 @@
       }
 
       > div {
-        padding: 2rem 1rem 0;
+        padding: 2rem 1rem 0 0;
         order: 2;
 
         @include sm {
           order: unset;
-          padding: 0 1.5rem;
+          padding: 0 1.5rem 0 0;
         }
 
         > div {
@@ -308,7 +326,7 @@
       padding: 0;
       position: absolute;
       bottom: 2rem;
-      left: 1.5rem;
+      left: 0;
       cursor: pointer;
       width: 50px;
       justify-content: space-between;
