--- a/src/scss/brand/components/accordion/_index.scss
+++ b/src/scss/brand/components/accordion/_index.scss
@@ -20,7 +20,7 @@
         }
         .accordion-content-wrapper {
           .accordion-content > .paragraphSystem {
-            padding: 0 1.5rem 1.5rem 1.5rem;
+            padding: 1rem;
           }
         }
         .accordion-head {
