--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -180,15 +180,20 @@
     left: 1rem;
   }
   .reference-bp-share-icon-svg {
-    margin: 2.5rem 0;
+    margin-bottom: 1rem 0;
     display: inline-block;
     width: 3.25rem;
     @include sm {
       display: block;
+      width: auto;
     }
     .share-icon {
-      padding: 0.75rem;
-      border: 2px solid $color-2;
+    display: flex;
+    width: 3rem;
+    height: 3rem;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid $color-2;
     }
   }
 }
@@ -210,6 +215,12 @@
   width: 15px !important;
 }
 
+.article-date {
+  color: $color-2;
+  font-weight: $font-extra-bold;
+  @extend .font-small-12;
+  text-align: center;
+  }
 // end
 
 .numeric-list {
