--- a/src/scss/brand/components/slick-slider/_index.scss
+++ b/src/scss/brand/components/slick-slider/_index.scss
@@ -243,6 +243,13 @@
  */
 
 .custamized-banner {
+  padding-left: 1.5rem !important;
+  padding-right: 1.5rem !important;
+
+  @include sm {
+    padding-right: 0 !important;
+  }
+
   .product-slider {
     display: flex;
     flex-direction: column;
@@ -253,11 +260,11 @@
       @include sm {
         display: block;
         order: 2;
-        margin-top: 0;
         z-index: 1;
-        margin-top: -2rem;
+        margin: -2rem 0 5rem 0;
         width: 100%;
       }
+
       @include lg {
         width: 90%;
       }
@@ -269,31 +276,45 @@
       .slick-track {
         display: flex;
         height: auto !important;
+
         .slick-slide {
           @include sm {
             padding: 0 1rem 0 0;
           }
+
           @include md {
             padding: 0 2rem 0 0;
           }
-          &.slick-active {
+
+          &.slick-current {
             .thumbs-wrapper {
               border-bottom: 6px solid $color-primary;
             }
           }
         }
+
         .thumbs-wrapper {
           display: flex;
 
           p {
             padding: 1rem;
           }
+
+          * {
+            @include sm {
+              flex-basis: 50%;
+              width: 50%;
+              max-width: 50%;
+            }
+          }
         }
       }
     }
+
     .slick-track {
       display: flex;
     }
+
     .carousel-wrapper {
       display: flex;
       flex-direction: column;
@@ -305,18 +326,22 @@
       }
 
       > div {
-        padding: 2rem 1rem 0 0;
+        padding: 2rem 3rem 0 0;
         order: 2;
 
         @include sm {
           order: unset;
-          padding: 0 1.5rem 0 0;
+          padding: 0 2rem 0 0;
         }
 
         > div {
           display: flex;
           flex-direction: column;
         }
+      }
+
+      img {
+        padding: 0 !important;
       }
     }
 
@@ -368,5 +393,36 @@
 
   .slick-list {
     height: auto !important;
+  }
+}
+
+.checkout-section {
+  position: relative;
+
+  .carousel-nav {
+    display: block !important;
+    text-align: center;
+    padding: 0;
+    position: absolute;
+    bottom: 6rem;
+    left: 0;
+    cursor: pointer;
+    width: 50px;
+    justify-content: space-between;
+    align-items: center;
+    display: flex;
+    list-style-type: none;
+  }
+  .carousel-nav li {
+    width: 4px;
+    height: 20px;
+    background-color: $color-1;
+    border-radius: 0;
+  }
+
+  .carousel-nav li.is-active {
+    width: 8px;
+    height: 32px;
+    background-color: $color-black;
   }
 }
