--- a/src/scss/brand/components/rich-text/_index.scss
+++ b/src/scss/brand/components/rich-text/_index.scss
@@ -192,7 +192,7 @@
     width: 3rem;
     height: 3rem;
     align-items: center;
-    justify-content: cenlter;
+    justify-content: center;
     border: 2px solid $color-2;
     }
   }
