--- a/src/scss/brand/components/forms/_index.scss
+++ b/src/scss/brand/components/forms/_index.scss
@@ -65,7 +65,7 @@
       &::before {
         content: '';
         position: absolute;
-        border: 2px solid #000;
+        border: 4px solid red;
         border-radius: 0px;
         display: inline-block;
         width: 17px;
