--- a/src/scss/brand/components/slick-slider/_index.scss
+++ b/src/scss/brand/components/slick-slider/_index.scss
@@ -405,7 +405,7 @@
       padding: 0;
       position: absolute;
       bottom: 6rem;
-      left: 0;
+      left: 1.5rem;
       cursor: pointer;
       width: 50px;
       justify-content: space-between;
@@ -426,6 +426,16 @@
       width: 8px;
       height: 32px;
       background-color: $color-black;
+    }
+    .carousel-slides {
+      .richText {
+        padding-top: 0 1rem 4rem;
+        order: 2;
+        @include sm {
+          padding-top: 0 1rem 1rem;
+          order: unset;
+        }
+      }
     }
   }
 
