--- a/src/scss/brand/theme/_brand-styles.scss
+++ b/src/scss/brand/theme/_brand-styles.scss
@@ -424,3 +424,11 @@ a:hover {
 .bordered-text {
   border-bottom: 2px solid var(--border-color-2);
 }
+
+.richText-content{
+  ul>li , ol>li{
+    &::before{
+      line-height: 1;
+    }
+  }
+} 
