--- a/src/scss/brand/theme/_brand-styles.scss
+++ b/src/scss/brand/theme/_brand-styles.scss
@@ -425,10 +425,11 @@ a:hover {
   border-bottom: 2px solid var(--border-color-2);
 }
 
-.richText-content{
-  ul>li , ol>li{
-    &::before{
+.richText-content {
+  ul > li,
+  ol > li {
+    &::before {
       line-height: 1;
     }
   }
-} 
+}
