--- a/src/scss/brand/theme/_brand-styles.scss
+++ b/src/scss/brand/theme/_brand-styles.scss
@@ -431,4 +431,9 @@ a:hover {
       line-height: 1;
     }
   }
-} 
+}
+ 
+.bg-cover>.component-content{
+background-repeat: no-repeat;
+background-size: cover;
+}
