--- a/src/scss/brand/components/headings-and-borders/_index.scss
+++ b/src/scss/brand/components/headings-and-borders/_index.scss
@@ -39,6 +39,10 @@
      &::after{
        z-index: 1;
        top: 100%;
+       @include sm{
+        z-index: -1;
+        top: -100%;
+       }
      }
    }
     &.two-steps {
