--- a/src/scss/brand/components/search-results/_index.scss
+++ b/src/scss/brand/components/search-results/_index.scss
@@ -3,7 +3,7 @@
     display: flex;
   }
   button {
-    background-color: $color-primary;
+    background-color: $color-primary !important;
     &:before {
       display: none !important;
     }
@@ -13,6 +13,7 @@
     width: 100%;
     input {
       display: block !important;
+      width: 100%;
     }
   }
 }
