--- a/src/scss/brand/components/accordion/_index.scss
+++ b/src/scss/brand/components/accordion/_index.scss
@@ -9,8 +9,9 @@
         margin-bottom: 0;
         list-style-type: none;
         margin-left: 0;
-        border-top: 2px solid $color-2;
-        border-bottom: 2px solid $color-2;
+        border-top: 1px solid $color-2;
+        border-bottom: 1px solid $color-2;
+        padding-right: 1rem;
         &.last {
           margin-bottom: 0;
         }
@@ -49,6 +50,7 @@
             a {
               font-size: $font-size-18;
               font-weight: $font-semi-bold;
+              color: $color-2;
               @include sm {
                 font-size: $font-size-21;
               }
