--- a/src/scss/brand/components/search-results/_index.scss
+++ b/src/scss/brand/components/search-results/_index.scss
@@ -17,3 +17,26 @@
     }
   }
 }
+
+.searchResults-number {
+  padding-bottom: 0.75rem;
+  border-bottom: 2px solid #9e9e9e;
+}
+.searchResults-results {
+  border-bottom: 2px solid #9e9e9e;
+}
+
+.searchResults-result.has-image{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  img{
+    order: 2;
+  }
+  .searchResults-title{
+    width: 70%;
+  }
+  .searchResults-description{
+    width: 70%;
+  }
+}
