--- a/src/scss/brand/components/story-blocks/_index.scss
+++ b/src/scss/brand/components/story-blocks/_index.scss
@@ -91,3 +91,11 @@
     }
   }
 }
+.story-inline {
+  .story-block {
+    flex-direction: row;
+    .story-content {
+      width: 100%;
+    }
+  }
+}
