--- a/src/scss/brand/components/search-results/_index.scss
+++ b/src/scss/brand/components/search-results/_index.scss
@@ -22,10 +22,12 @@
   padding-bottom: 0.75rem;
   border-bottom: 2px solid #9e9e9e;
 }
-.searchResults-results {
+/* .searchResults-results {
+  border-bottom: 2px solid #9e9e9e;
+} */
+.searchResults-result {
   border-bottom: 2px solid #9e9e9e;
 }
-
 .searchResults-result.has-image {
   display: flex;
   justify-content: space-between;
