--- a/src/scss/brand/components/story-blocks/_index.scss
+++ b/src/scss/brand/components/story-blocks/_index.scss
@@ -94,6 +94,9 @@
 .story-inline {
   .story-block {
     flex-direction: row;
+    @include sm {
+      flex-direction: column;
+    }
     .story-content {
       width: 100%;
     }
