--- a/src/scss/brand/components/search-results/_index.scss
+++ b/src/scss/brand/components/search-results/_index.scss
@@ -34,7 +34,8 @@
   flex-wrap: wrap;
   img {
     order: 2;
-    margin-top: -3rem;
+    margin-top: -1rem;
+    width: 300px;
   }
   .searchResults-title {
     width: 70%;
