--- a/src/scss/brand/components/slick-slider/_index.scss
+++ b/src/scss/brand/components/slick-slider/_index.scss
@@ -452,3 +452,12 @@
     margin: 0 !important;
   }
 }
+
+.img-bottom-btn{
+  .youtube-player {
+    top: auto;
+    left: auto;
+    bottom: 0;
+    right: 0;
+  }
+}
