--- a/src/scss/brand/theme/_buttons.scss
+++ b/src/scss/brand/theme/_buttons.scss
@@ -71,7 +71,7 @@
     }
   }
   &.btn-border-black {
-    background-color: $color-white;
+    background-color: inherit;
     border: 2px solid $color-2;
     font-weight: $font-normal !important;
     font-size: $font-size-18;
