--- a/src/scss/brand/components/icons/_index.scss
+++ b/src/scss/brand/components/icons/_index.scss
@@ -25,133 +25,182 @@
 }
 .icon-alert:before {
   content: '\e900';
+  @extend .icomoon;
 }
 .icon-angle-down:before {
   content: '\e901';
+  @extend .icomoon;
 }
 .icon-angle-left:before {
   content: '\e902';
+  @extend .icomoon;
 }
 .icon-angle-right:before {
   content: '\e903';
+  @extend .icomoon;
 }
 .icon-angle-top:before {
   content: '\e904';
+  @extend .icomoon;
 }
 .icon-arrow-down:before {
   content: '\e905';
+  @extend .icomoon;
 }
 .icon-arrow-left:before {
   content: '\e906';
+  @extend .icomoon;
 }
 .icon-arrow-right:before {
   content: '\e907';
+  @extend .icomoon;
 }
 .icon-arrow-top:before {
   content: '\e908';
+  @extend .icomoon;
 }
 .icon-arrow-top-right:before {
   content: '\e909';
+  @extend .icomoon;
 }
 .icon-cascade:before {
   content: '\e90a';
+  @extend .icomoon;
 }
 .icon-chat:before {
   content: '\e90b';
+  @extend .icomoon;
 }
 .icon-check:before {
   content: '\e90c';
+  @extend .icomoon;
 }
 .icon-clock:before {
   content: '\e90d';
+  @extend .icomoon;
 }
 .icon-close-line:before {
   content: '\e90e';
+  @extend .icomoon;
 }
 .icon-contrast-fill:before {
   content: '\e90f';
+  @extend .icomoon;
 }
 .icon-document:before {
   content: '\e910';
+  @extend .icomoon;
 }
 .icon-download:before {
   content: '\e911';
+  @extend .icomoon;
 }
 .icon-info:before {
   content: '\e912';
+  @extend .icomoon;
 }
 .icon-lightbulb:before {
   content: '\e913';
+  @extend .icomoon;
 }
 .icon-location:before {
   content: '\e914';
+  @extend .icomoon;
 }
 .icon-mail:before {
   content: '\e915';
+  @extend .icomoon;
 }
 .icon-menu-line:before {
   content: '\e916';
+  @extend .icomoon;
 }
 .icon-mobile:before {
   content: '\e917';
+  @extend .icomoon;
 }
 .icon-notification:before {
   content: '\e918';
+  @extend .icomoon;
 }
 .icon-pause:before {
   content: '\e919';
+  @extend .icomoon;
 }
 .icon-phone-line:before {
   content: '\e91a';
+  @extend .icomoon;
 }
 .icon-play:before {
   content: '\e91b';
+  @extend .icomoon;
+}
+.icon-play-right:after {
+  content: '\e91b';
+  @extend .icomoon;
+  margin-left:0.25rem;
 }
 .icon-plus:before {
   content: '\e91c';
+  @extend .icomoon;
 }
 .icon-search-line:before {
   content: '\e91d';
+  @extend .icomoon;
 }
 .icon-settings:before {
   content: '\e91e';
+  @extend .icomoon;
 }
 .icon-facebook:before {
   content: '\ea90';
+  @extend .icomoon;
 }
 .icon-facebook2:before {
   content: '\ea91';
+  @extend .icomoon;
 }
 .icon-instagram:before {
   content: '\ea92';
+  @extend .icomoon;
 }
 .icon-whatsapp:before {
   content: '\ea93';
+  @extend .icomoon;
 }
 .icon-twitter:before {
   content: '\ea96';
+  @extend .icomoon;
 }
 .icon-vine:before {
   content: '\ea97';
+  @extend .icomoon;
 }
 .icon-vimeo2:before {
   content: '\eaa1';
+  @extend .icomoon;
 }
 .icon-behance:before {
   content: '\eaa8';
+  @extend .icomoon;
 }
 .icon-skype:before {
   content: '\eac5';
+  @extend .icomoon;
 }
 .icon-reddit:before {
   content: '\eac6';
+  @extend .icomoon;
 }
 .icon-linkedin:before {
   content: '\eac9';
+  @extend .icomoon;
 }
 .icon-linkedin2:before {
   content: '\eaca';
+  @extend .icomoon;
 }
 .icon-youtube:before {
   content: '\ea9d';
+  @extend .icomoon;
 }
