--- a/src/scss/brand/components/slick-slider/_index.scss
+++ b/src/scss/brand/components/slick-slider/_index.scss
@@ -455,9 +455,11 @@
 
 .img-bottom-btn{
   .youtube-player {
+   .play{
     top: auto;
     left: auto;
     bottom: 0;
     right: 0;
+   }
   }
 }
