--- a/src/scss/brand/components/icons/_index.scss
+++ b/src/scss/brand/components/icons/_index.scss
@@ -6,7 +6,8 @@
 
 [class^='icon-'],
 [class*=' icon-'] {
-  /* use !important to prevent issues with browser extensions that change fonts */
+ &::after , &::before{
+    /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'icomoon' !important;
   speak: never;
   font-style: normal;
@@ -18,6 +19,7 @@
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+ }
 }
 
 .icomoon {
